[package]
name = "mixshoes_form_cleaner"
version = "0.1.0"
edition = "2018"
authors = ["Leynaïc Brisse <leynaic.brisse@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
csv = "1.1.6"
regex = "1.5.5"